# web-collector

./: .gitignore  README.md  bot.py  config.yml  main.py  pyproject.toml  url_titles.txt
src/web_collector/: bot.py  collector.py  config.py  database.py  similarity.py  websites.db
