[project]
name = "web-collector"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "heihei", email = "heihei@hei.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "python-telegram>=0.19.0",
    "python-telegram-bot>=21.4",
    "loguru>=0.7.2",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "simhash>=2.1.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
